- 0.0.27:
	* Add man pages
- 0.0.26:
	* Remove manual 0x handling bug in tx
- 0.0.25:
	* Upgrade chainlib to get passphrase file for wallet keyfile
- 0.0.24:
	* Upgrade from hexathon bug breaking compact hex function
- 0.0.23:
	* Make get block args and responses compatible with picky golang marhaling in geth
- 0.0.22:
	* Enable unpack of pre EIP-155 transactions
	* Allow missing status property of receipts in non-strict modes
- 0.0.21:
	* Remove warnings from cytoolz/rlp in funga-eth
- 0.0.15:
	* Correct inverted addess checksum check for gas cli
- 0.0.5-unreleased:
	* Receive all ethereum components from chainlib package
	* Make settings configurable