@@ -7,6 +7,8 @@ from hexathon import add_0x
 
 cmds = {
         'gas': chainlib.eth.cli.argflag_std_write | chainlib.eth.cli.Flag.WALLET,
+        'info': chainlib.eth.cli.argflag_reset(chainlib.cli.argflag_std_base_read, chainlib.eth.cli.Flag.CHAIN_SPEC),
+        'get': chainlib.eth.cli.argflag_reset(chainlib.cli.argflag_std_base_read, chainlib.eth.cli.Flag.CHAIN_SPEC),
         }
 
 if __name__ == '__main__':
